PUSH FOR PERMISSIONS FOR OWNER